# conversation_enrichment_service

./: .gitignore  CLAUDE.md  README.md  backlog_management_runbook.md  decision_rationale_1.docx  failure_mode_test_plan.md  implementation_design_1.docx  monitoring.md  pyproject.toml  ruff.toml  smoke_test_instructions.md
.github/: pull-request-template.md
docs/: maintenance.md
halo-artefacts/AE/AE-1540/: adr_draft.md  plan.md  plan_second-opinion.md
halo-artefacts/AE/configure_config_sheet/: plan.md
sql/: 01_warehouse.sql  02_schema_and_tables.sql  03_views.sql  04_security.sql  05_submit_procedure.sql  05a_stage.sql  06_retrieve_procedure.sql  07_tasks.sql  08_seed_config.sql
src/batch_enrichment/: jsonl_builder.py  models.py  response_parser.py  retrieve.py  submit.py
streamlit/: README.md  environment.yml  streamlit_app.py  utils.py
streamlit/pages/: 01_Throughput.py  02_Latency.py  03_Quality.py  04_Failures.py  05_Cost.py  06_Audit.py
tests/integration/: test_retrieve.py  test_submit.py
tests/unit/: test_jsonl_builder.py  test_models.py  test_response_parser.py
